Fixed image scaling correctly, added hidden overflow to comments

--- a/styles.css
+++ b/styles.css
@@ -326,7 +326,7 @@ nav {
     flex-direction: row;
     align-items: flex-start;
     gap: 10px;
-    max-height: 100%;
+    height: 100%;
     width: min-content;
 }
 
@@ -338,12 +338,11 @@ nav {
     border-radius: 20px;
     border: 1px solid var(--less-white);
     height: 100%;
-    min-width: min(100vw - 135px, 600px);
 }
 
 .full-image {
     max-height: 100%;
-    width: 100%;
+    max-width: min(100vw - 140px, 800px);
     background-color: white;
     margin: 0;
 }
@@ -352,12 +351,12 @@ nav {
     display: flex;
     flex-direction: column;
     background-color: white;
-    max-height: 100%;
+    height: 100%;
     padding: 0;
     border-radius: 20px;
     border: 1px solid var(--less-white);
     max-width: 100%;
-    position: relative; /* For absolute positioning of the saved count */
+    overflow: hidden;
 }
 
 /* Styling for the saved count display */
@@ -401,7 +400,7 @@ nav {
     overflow-y: scroll;
     flex: 1;
     padding-inline: 20px;
-    border-block: 1px solid var(--less-white);
+    border-top: 1px solid var(--less-white);
 }
 
 .comment {
@@ -435,6 +434,12 @@ nav {
 }
 
 .comment-form {
+    background-color: white;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid var(--less-white);
+
     display: flex;
     flex-direction: column;
     padding: 15px;
